apps/base/dashboard/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: dashboard
  labels:
    app: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
      - name: glance
        image: docker.io/glanceapp/glance:0.7.12
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        volumeMounts:
        - name: glance-config
          mountPath: /app/config/glance.yml
          subPath: glance.yml
      volumes:
        - name: glance-config
          configMap:
            name: glance-cm
