apps/base/dashboard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: glance-svc
  namespace: dashboard
spec:
  selector:
    app: glance
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
