apps/base/dashboard/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance-https-route
  namespace: dashboard
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
    - name: internal-https-gateway
      namespace: default
  hostnames:
    - home.internal.leomercier.dev
  rules:
    - backendRefs:
        - name: glance-svc
          port: 8080
